Minor UI fixes for 4.0 (#6899)
* PLT-7056 - Fixing profile popover position

* PLT-7082 - Removing extra space below header

* PLT-7074 - Channel header fix

* PLT-7054 - Fixing scroll inside members popover

* Updating mention highlight color for default theme

--- a/webapp/sass/layout/_headers.scss
+++ b/webapp/sass/layout/_headers.scss
@@ -197,13 +197,13 @@
         display: inline-block;
         height: 35px;
         margin-top: -10px;
-        max-width: calc(100vw - 720px);
+        max-width: calc(100vw - 740px);
         overflow: hidden;
         padding: 3px 0 0;
         position: relative;
         text-overflow: ellipsis;
         top: 10px;
-        white-space: nowrap;
+        white-space: pre;
         word-break: break-word;
 
         .markdown__heading {
@@ -212,7 +212,7 @@
         }
 
         .multi-teams & {
-            max-width: calc(100vw - 790px);
+            max-width: calc(100vw - 810px);
         }
 
         &.light {
@@ -226,10 +226,10 @@
         }
 
         .move--left & {
-            max-width: calc(100vw - 790px);
+            max-width: calc(100vw - 810px);
 
             .multi-teams & {
-                max-width: calc(100vw - 840px);
+                max-width: calc(100vw - 860px);
             }
         }
 
